<resources>
    <string name="name">Name</string>
    <string name="app_name">Coffee</string>
    <string name="whipped_cream">Whipped_cream</string>
    <string name="quantity">Quantity</string>
    <string name="number">1</string>
    <string name="order">ORDER</string>
    <string name="price">PRICE</string>
    <string name="price_text_view">$5</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="hellow">Topping</string>
</resources>

